[metadata]
name = tno.mpc.encryption_schemes.dgk
author = TNO MPC Lab
author_email = mpclab@tno.nl
maintainer = TNO MPC Lab
maintainer_email = mpclab@tno.nl
description = Implementation of the Damgard, Geisler and Kroigard (DGK) cryptosystem
classifiers =
   License :: OSI Approved :: Apache Software License
   Programming Language :: Python :: 3
   Operating System :: OS Independent
   Intended Audience :: Developers
   Intended Audience :: Information Technology
   Intended Audience :: Science/Research
   Typing :: Typed
   Topic :: Security :: Cryptography
license = Apache License, Version 2.0
license_file = LICENSE
platform = any
python_requires = >=3.7
keywords =
    TNO
    MPC
    multi-party computation
    encryption schemes
    dgk
    Damgard, Geisler and Kroigard
    cryptosystem
url = https://mpc.tno.nl/
download_url = https://pypi.org/project/tno.mpc.encryption_schemes.dgk/#files
project_urls =
    Documentation = https://docs.mpc.tno.nl/encryption_schemes/dgk/2.1.1
    Source Code = https://github.com/TNO-MPC/encryption_schemes.dgk
version = attr: tno.mpc.encryption_schemes.dgk.__version__
long_description_content_type = text/markdown
long_description = file: README.md

[options]
packages =
    tno.mpc.encryption_schemes.dgk
    tno.mpc.encryption_schemes.dgk.test
zip_safe = False
install_requires =
    tno.mpc.encryption_schemes.templates~=3.0
    tno.mpc.encryption_schemes.utils~=0.9
    typing_extensions
namespace_packages =
    tno
    tno.mpc
    tno.mpc.encryption_schemes
include_package_data = True

[options.package_data]
tno.mpc.encryption_schemes.dgk = py.typed

[options.extras_require]
gmpy =
    tno.mpc.encryption_schemes.utils[gmpy]~=0.9
communication =
    tno.mpc.communication~=4.0
tests =
    pytest
    pytest-asyncio
    sympy~=1.3
    tno.mpc.communication~=4.0
